--- a/01-04-data-wrangling-with-dplyr.qmd
+++ b/01-04-data-wrangling-with-dplyr.qmd
@@ -593,7 +593,14 @@ This added information reminds us that while the average number of appearances f
 <br />
 
 
+## Additional Resources
 
+Here are some additional resources for learning `{dplyr}`.
 
+- [Data Transformation with dplyr Cheatsheet](https://www.rstudio.com/resources/cheatsheets/): A printable cheatsheet for using `{dplyr}`.
+- [Data Wrangling Part 1: Basic to Advanced Ways to Select Columns](https://suzan.rbind.io/2018/01/dplyr-tutorial-1/)
+- [Data Wrangling Part 2: Transforming your columns into the right shape](https://suzan.rbind.io/2018/02/dplyr-tutorial-2/)
+- [Data Wrangling Part 3: Basic and more advanced ways to filter rows](https://suzan.rbind.io/2018/02/dplyr-tutorial-3/)
+- [Data Wrangling Part 4: Summarizing and slicing your data](https://suzan.rbind.io/2018/04/dplyr-tutorial-4/)
 
-
+<br />
