--- a/03-01-coefficient-level-inference.qmd
+++ b/03-01-coefficient-level-inference.qmd
@@ -229,7 +229,7 @@ $$
 
 ### Quantification of Uncertainty in Regression
 
-We can extend these ideas to regression. Now the thought experiment goes something like this: Imagine you have a population that is infinitely large. The observations in this population have two attributes, call them *X* and *Y*. The relationship between these two attributes can be expressed via a regression equation as: $\hat{Y}=\beta_0 + \beta_1(X)$. Randomly sample *n* observations from the population. This time, rather than computing a mean, regress the sample *Y* values on the sample *X* values. Since the sample regression coefficients are estimates of the population parameters, we will write this as: $\hat{Y}=\hat{\beta}_{0,1} + \hat{\beta}_{1,1}(X)$. Repeat the process. This time the regression equation is: $\hat{Y}=\hat{\beta}_{0,2} + \hat{\beta}_{1,2}(X)$. Continue this process an infinite number of times.
+We can extend these ideas to regression. Now the thought experiment goes something like this: Imagine you have a population that is infinitely large. The observations in this population have two attributes, call them *X* and *Y*. The relationship between these two attributes can be expressed via a regression equation as: $Y_i=\beta_0 + \beta_1(X_i) + \epsilon_i$. Randomly sample *n* observations from the population. This time, rather than computing a mean, regress the sample *Y* values on the sample *X* values. Since the sample regression coefficients are estimates of the population parameters, we will write this as: $\hat{Y}=\hat{\beta}_{0,1} + \hat{\beta}_{1,1}(X)$. Repeat the process. This time the regression equation is: $\hat{Y}=\hat{\beta}_{0,2} + \hat{\beta}_{1,2}(X)$. Continue this process an infinite number of times.
 
 ```{r echo=FALSE, out.width='80%', fig.cap=''}
 #| label: fig-thought-exp-reg
